친구 request, response 정리 및 테스트 코드 수정 (#205)
* refactor : request, response 값 정리

* refactor : ErrorCode 이름 변경

* refactor : List -> Page 변경

* refactor : FriendService 로직 수정

* refactor : FriendService 로직 수정 에 따른 테스트 코드 수정